--- a/styles.css
+++ b/styles.css
@@ -1,109 +1,80 @@
 body {
   background: #ABA9A9;
+  /* height: 100%; */
 }
 
-/* edits of 1st container  ---------------------------------*/
-
-
-
-
-.section1 {
-  background-color: #F9F9F9;
-  margin: 400px;
+.container {
   position: relative;
-  right: 350px;
-  bottom: 350px;
 }
 
-.section1::after {
-  content: "";
-  height: 10px;
-  width: 10px;
+section {
+  width: 514px;
+  background-color: #F9F9F9;
+}
+
+section:not(:last-child) {
+  margin-bottom: 50px;
 }
 
 .date1 {
-  background-color: red;
   display: inline-block;
+  background-color: red;
   color: #F9F9F9;
   padding: 15px;
   font-size: 20px;
+  float: right;
   margin: 0;
-  position: relative;
-  left: 345px;
-}
-
-.title1 {
-  padding-left: 20px;
-  margin: 0;
-  font-size: 35px;
-  font-family: sans-serif;
-}
-
-.paragraph1 {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 10px;
-  font-size: 20px;
-}
-
-.button1 {
-  background-color: #1489BF;
-  color: white;
-  border: 2px solid #1489BF;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  display: inline-block;
-  padding-left: 20px;
-  padding-bottom: 10px;
-  padding-right: 20px;
-  padding-top: 10px;
-}
-
-.button1:hover {
-  background-color: white;
-  color: black;
-}
-
-/* edits of 2nd container -------------------------------------------------- */
-.section2 {
-  background-color: #F9F9F9;
-  margin: 300px;
-  margin-right: 500px;
-  background-size: 100% 50%;
-  width: 500px;
-  position: relative;
-  left: 450px;
-  bottom: 650px;
-  background-repeat: no-repeat;
-  background-image: url("https://cdn.serif.com/spotlight/content/z8z/t9n/xlj/image-060ce5f3f1e5648705c9244ce549b589--opengraph@1x.jpg");
 }
 
 .date2 {
+  display: inline-block;
   background-color: red;
   color: #F9F9F9;
-  display: inline-block;
   padding: 15px;
   font-size: 20px;
   margin: 0;
 }
 
-.title2 {
-  padding-left: 20px;
-  padding-top: 70px;
+.date3 {
+  display: inline-block;
+  background-color: red;
   color: #F9F9F9;
-  font-size: 35px;
-  font-family: sans-serif;
+  padding: 15px;
+  font-size: 20px;
+  float: right;
+  margin: 0;
+}
+
+.title1 {
+  padding-top: 55px;
+  margin-left: 32px;
+}
+
+.title2 {
+  padding-top: 90px;
+  margin-left: 32px;
+  color: white;
+}
+
+.title3 {
+  padding-top: 70px;
+  margin-left: 38px;
+}
+
+.paragraph1 {
+  margin-left: 32px;
 }
 
 .paragraph2 {
-  font-size: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-left: 32px;
   padding-top: 20px;
 }
 
-/* edits of 3rd container ----------------------------------------------------- */
-.button2 {
+.paragraph3 {
+  margin-left: px;
+}
+
+button {
   background-color: #1489BF;
   color: white;
   border: 2px solid #1489BF;
@@ -116,117 +87,82 @@ body {
   padding-top: 10px;
 }
 
-.button2:hover {
+button:hover {
   background-color: white;
   color: black;
+  cursor: pointer;
+}
+
+.button1 {
+  position: relative;
+  top: 10px;
+}
+
+.button2 {
+  position: relative;
+  top: 10px;
+}
+
+@media (min-width: 576px) {
+  section:nth-child(2n+1) {
+    margin-right: auto;
+  }
+
+  section:nth-child(2n) {
+    margin-left: auto;
+    background-repeat: no-repeat;
+    background-image: url("https://cdn.serif.com/spotlight/content/z8z/t9n/xlj/image-060ce5f3f1e5648705c9244ce549b589--opengraph@1x.jpg");
+    background-size: 100% 50%;
+  }
+
+  section:nth-child(2n) .date {
+    position: absolute;
+  }
+}
+
+.section1 {
+  height: 257px;
+  margin-left: 25px;
+}
+
+.section2 {
+  height: 393px;
+  margin-right: 25px;
 }
 
 .section3 {
-  background-color: #F9F9F9;
-  margin: 400px;
-  position: relative;
-  right: 350px;
-  bottom: 950px;
+  height: 201px;
+  margin-left: 25px;
 }
 
-.date3 {
-  background-color: red;
-  color: #F9F9F9;
-  display: inline-block;
-  padding: 15px;
-  font-size: 20px;
-  margin: 0;
-  position: relative;
-  left: 338px;
-}
-
-.title3 {
-  padding-left: 20px;
-  padding-top: 0;
-  margin: 0;
-  font-size: 35px;
-  font-family: sans-serif;
-}
-
-.paragraph3 {
-  padding-left: 60px;
-  padding-right: 20px;
-  padding-bottom: 25px;
-  margin: 10px;
-  font-size: 20px;
-}
-
-/* This is where my lines are  */
-.line {
-  border-left: 6px solid #1489BF;
-  height: 2000px;
+.container::after {
+  content: '';
+  background: #1489BF;
+  width: 5px;
   position: absolute;
   left: 50%;
-  margin-left: -3px;
+  transform: translateX(-50%);
   top: 0;
+  bottom: 0;
 }
 
-.line2 {
-  border-left: 6px solid #1489BF;
-  height: 70px;
-  position: absolute;
-  left: 7%;
-  margin-left: -3px;
-  top: 1080px;
-}
-
-/* triangles start here...................... */
-.triangle-right {
-  width: 0px;
-  height: 0px;
-  border-top: 15px solid transparent;
-  border-left: 20px solid #F9F9F9;
-  border-bottom: 15px solid transparent;
+blockquote {
+  border-left: solid 3px #1489BF;
   position: relative;
-  left: 530px;
-  bottom: 1485px;
+  margin-left:25px;
+  padding-left: 25px;
+
 }
 
-
-
-.triangle-right2 {
-  width: 0px;
-  height: 0px;
-  border-top: 15px solid transparent;
-  border-left: 20px solid #F9F9F9;
-  border-bottom: 15px solid transparent;
-  position: relative;
-  left: 530px;
-  bottom: 2440px;
-}
-
-
-
-.triangle-left {
-  width: 0px;
-  height: 0px;
-  border-top: 15px solid transparent;
-  border-right: 20px solid #F9F9F9;
-  border-bottom: 15px solid transparent;
-  position: relative;
-  left: 730px;
-  bottom: 2070px;
-}
-
-/* circles are here................................. */
-.circle {
+ .circle {
   height: 30px;
   width: 30px;
   background-color: #1489BF;
   border-radius: 50%;
   position: relative;
-  left: 625px;
-  bottom: 2130px;
-}
+  left:615.6px;
 
-.circle:hover {
-  background-color: black;
-
+  bottom: 600px;
 }
 .circle2 {
   height: 30px;
@@ -234,24 +170,59 @@ body {
   background-color: #1489BF;
   border-radius: 50%;
   position: relative;
-  left: 625px;
-  bottom: 2550px;
+  left: 615.6px;
+  bottom: 200px;
 }
-
-.circle2:hover {
-  background-color: black;
-}
-
 .circle3 {
   height: 30px;
   width: 30px;
   background-color: #1489BF;
   border-radius: 50%;
   position: relative;
-  left: 625px;
-  bottom: 1650px;
+  left: 615.6px;
+  bottom: 975px;
 }
+.pencil1 {
+  display: inline-block;
+  position: relative;
+  left: 623px;
+  bottom: 683px;
+}
+.pencil2 {
+  display:inline-block;
+  position: relative;
+  left: 608px;
+  bottom:252px;
+}
+.pencil3 {
+  display:inline-block;
+  position: relative;
+  left: 590px;
+  bottom:1000px;
 
-.circle3:hover {
-  background-color: black;
+}
+.triangle1 {
+  display:inline-block;
+  position:relative;
+  left:486px;
+  bottom: 235px;
+  font-size: 15px;
+  color: white;
+
+}
+.triangle2 {
+  display: inline-block;
+  position: relative;
+  left: 657px;
+  bottom: 657px;
+  color: black;
+
+}
+.triangle3 {
+  display: inline-block;
+  position: relative;
+  left:466px;
+  bottom: 985px;
+  color: white;
+  font-size: 15px;
 }
